<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.FitWindowsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/MJ_Layout"
    >

    <TextView
        android:id="@+id/txtTitle"
        android:theme="@style/MJ_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@color/mj_black"
        android:background="@color/mj_yellow"
        android:layout_marginBottom="52dp"
        android:text="Match a Job" />

    <EditText
        android:id="@+id/txtLoginUser"
        android:hint="E-mail"
        android:inputType="textEmailAddress"
        style="@style/MJ_EditText"
        />

    <EditText
        android:id="@+id/txtLoginPass"
        android:hint="Senha"
        android:inputType="textPassword"
        style="@style/MJ_EditText"
        />

    <Button
        android:id="@+id/btnEntrar"
        android:text="Entrar"
        style="@style/MJ_Button"
        />


    <TextView
        style="@style/MJ_Label"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Ainda não é cadastrado? \nEscolha seu perfil e junte-se a nós!"
        android:lineSpacingMultiplier="1.25"
        android:textSize="16sp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnCadastrarEmpresa"
            android:layout_width="100dp"
            android:text="@string/lbl_empresa"
            style="@style/MJ_Button"
            />

        <Button
            android:id="@+id/btnCadastrarCandidato"
            android:layout_width="100dp"
            android:text="@string/lbl_candidato"
            style="@style/MJ_Button"
            />

        <Button
            android:id="@+id/btnCadastrarMentor"
            android:layout_width="100dp"
            android:text="@string/lbl_mentor"
            style="@style/MJ_Button"
            />

    </LinearLayout>


</android.support.v7.widget.FitWindowsLinearLayout>